updated github link

--- a/views/download.ejs
+++ b/views/download.ejs
@@ -3,7 +3,7 @@
 <body>
   <%- include('./partials/nav.ejs') %>
   <main class="btn">
-    <a href="https://monkeytype.com/"><button>github</button></a>
+    <a href="https://github.com/a-che613/express_js"><button>github</button></a>
   </main>
   <footer></footer>
 </body>
