--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <section>
       <div>
         <p><span>Express.js</span> is the most popular web framework for Node.js. It is designed for building 
-          web applications and APIs, and has been called the de facto standard framework for Node.js</p>
+          web applications and APIs, and has been called the "de facto" standard framework for Node.js</p>
         <p>Express.js provides features that make web application development fast and easy which otherwise takes more time using only Node.js.</p>
       </div>
       <div>
